# RAG-powered_medical_assistant

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: digital_data_etl.yaml  feature_engineering.yaml
llm_engineering/: settings.py
llm_engineering/application/crawlers/: __init__.py  base.py  dispatcher.py  pdf.py  pmc.py  pubmed.py
llm_engineering/application/preprocessing/: __init__.py  chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_engineering/application/preprocessing/operations/: __init__.py
llm_engineering/application/utils/: __init__.py  deidentify.py
llm_engineering/domain/: __init__.py  chunks.py  cleaned_documents.py  documents.py  embedded_chunks.py  types.py
llm_engineering/domain/base/: __init__.py
notebooks/: LangGraph-Bedrock-KB.ipynb  medical_assistance.ipynb  rag-part-1.ipynb  simple-langgraph-agent-setup.ipynb
pipelines/: __init__.py
steps/: __init__.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/feature_engineering/: __init__.py  query_data_warehouse.py
terraform/: README.md  aoss.tf  iam.tf  kb.tf  main.tf  s3.tf
tools/: run.py
